# hackupc2025-backend

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: main.py
app/config/: config.py
app/database/: database.py
app/handlers/: image.py  users.py  voice.py
initdb/: docker-compose.yml
initdb/db/: init.sql
